force-app/main/default/objects/User_Mappings__c/User_Mappings__c.object-meta.xml
<CustomObject>
    <label>( Deprecated ) User Mappings</label>
    <nameField>
        <label>User Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>( Deprecated ) User Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>