force-app/main/default/objects/User_Mappings__c/fields/CDM_User__c.field-meta.xml
<CustomField>
    <fullName>CDM_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CDM User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>