force-app/main/default/objects/User_Mappings__c/fields/Primary_ASE__c.field-meta.xml
<CustomField>
    <fullName>Primary_ASE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary ASE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ASE_FTCO_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>