force-app/main/default/objects/User_Mappings__c/fields/Primary_Field_CTO__c.field-meta.xml
<CustomField>
    <fullName>Primary_Field_CTO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Field CTO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ASE_FTCO_Mappings1</relationshipName>
    <type>Lookup</type>
</CustomField>