force-app/main/default/objects/User_Mappings__c/fields/Secondary_Field_CTO__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Field_CTO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Field CTO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ASE_FCTO_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>