force-app/main/default/objects/User_Mappings__c/fields/Unique_Mapping_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Mapping_Name__c</fullName>
    <externalId>true</externalId>
    <label>Unique Mapping Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>