force-app/main/default/objects/User_Mappings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Unique_Mapping_Name__c</columns>
    <columns>NAME</columns>
    <columns>Primary_ASE__c</columns>
    <columns>Primary_Field_CTO__c</columns>
    <columns>Secondary_Field_CTO__c</columns>
    <columns>CDM_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>